apps/base/scott-willeke-com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scott-willeke-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scott-willeke-com
  template:
    metadata:
      labels:
        app: scott-willeke-com
    spec:
      imagePullSecrets:
        - name: github-container-registry-secret
      containers:
        - name: scott-willeke-com
          # NOTE: this image is replaced with an images transformer in the overlay: https://kubectl.docs.kubernetes.io/references/kustomize/builtins/#_imagetagtransformer
          image: scott-willeke-com-image

          # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          volumeMounts:
            - name: logs-volume
              mountPath: /var/log/nginx

      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-pvc
