apps/base/scott-willeke-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scott-willeke-com
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: scott-willeke-com
