apps/base/scott-willeke-com/ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scott-willeke-com-ingress
spec:
  # patched in kustomize
  #tls:
  #- hosts:
  #    - scott.willeke.com
  # There must a a Certificate resource created that saves to this secret name
  #  secretName: scott-willeke-com-tls

  rules:
    - host: scott.willeke.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scott-willeke-com
                # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
                port:
                  name: web
